@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-27T00:54:53Z",
+  "timestamp" : "2025-09-28T01:02:54Z",
   "count_outdated" : 111,
   "uniques_outdated" : 93,
-  "count" : 116,
-  "uniques" : 98,
+  "count" : 117,
+  "uniques" : 99,
   "clones" : [
     {
       "timestamp": "2025-09-17T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2025-09-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
